--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ background-color: black;
   background-color: tomato;
   flex-wrap: wrap;
   display:flex;
-  justify-content: space-between;
+  justify-content:center;
   align-items: center;}
   .linkovi{
   margin: 2px;
