--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ background-color: black;
   background-color: tomato;
   flex-wrap: wrap;
   display:flex;
-/*   justify-content:center; */
+  justify-content:space-around;
   align-items: center;}
   .linkovi{
   margin: 2px;
